# odin

./: CONTRIBUTING  Cargo.toml  README.md  justfile  odin.yaml
src/: common.rs  config.rs  context.rs  default_config.rs  display_enum.rs  error.rs  filter.rs  fn_cmd.rs  fn_env.rs  ft_join.rs  function.rs  location.rs  main.rs  opt.rs  query.rs  subcommand.rs  template_parse_error.rs  templates.rs  testing.rs  use_color.rs
src/subcommand/: dump.rs  open.rs  print.rs
tests/: cmd_function.rs  default_templates.rs
