[package]
name = "odin"
version = "0.1.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xdg = "2.2.0"
serde_yaml = "0.8.9"
webbrowser = "0.5.1"
tera = "0.11.20"
serde = "1.0.97"
structopt = "0.2.18"
serde_derive = "1.0.97"
url = "1.7.2"
