[package]
name    = "odin"
version = "0.0.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
edition = "2018"

[dependencies]
serde        = "1.0.97"
serde_derive = "1.0.97"
serde_yaml   = "0.8.9"
structopt    = "0.2.18"
tera         = "0.11.20"
url          = "1.7.2"
webbrowser   = "0.5.1"
xdg          = "2.2.0"
